--- a/config.json
+++ b/config.json
@@ -2,5 +2,17 @@
     "css": {
         "src": ["src/scss/*.scss"],
         "out": "out/css/"
+    },
+    "html": {
+        "src": ["src/*.html"],
+        "out": "out/"
+    },
+    "js": {
+        "src": ["src/js/*.js"],
+        "out": "out/js/"
+    },
+    "images": {
+        "src": ["src/images/*.*"],
+        "out": "out/images/"
     }
 }
