--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "global": "^4.3.2",
+    "imagemin-cli": "^3.0.0",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
@@ -27,10 +28,12 @@
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
+    "gulp-metalsmith": "^1.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-restart": "^0.1.1",
     "gulp-sourcemaps": "^2.6.4",
-    "postcss-custom-media": "^6.0.0",
+    "postcss-custom-media": "^7.0.1",
     "postcss-custom-properties": "^7.0.0",
     "postcss-custom-selectors": "^5.0.0",
     "postcss-import": "^12.0.0",
